--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.jakewharton.timber:timber:2.5.1'
 }
