--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.jakewharton.timber:timber:2.5.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
