--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.jakewharton.timber:timber:2.5.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
 }
