--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.jakewharton.timber:timber:2.5.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
+    compile 'com.android.support:design:22.2.0'
 }
